refactor api to be cleaner
