# swagger_server/models/__init__.py
@@ -4,6 +4,7 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.captcha_prompt import CaptchaPrompt
-from swagger_server.models.login_body import LoginBody
+from swagger_server.models.init_login_session import InitLoginSession
 from swagger_server.models.next_frame import NextFrame
+from swagger_server.models.submitted_frame import SubmittedFrame
 from swagger_server.models.successful_authentication import SuccessfulAuthentication
