# swagger_server/models/submitted_frame.py
@@ -9,19 +9,19 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class LoginBody(Model):
+class SubmittedFrame(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, frame: str=None, value: str=None, h_captcha_response: str=None):  # noqa: E501
-        """LoginBody - a model defined in Swagger
+        """SubmittedFrame - a model defined in Swagger
 
-        :param frame: The frame of this LoginBody.  # noqa: E501
+        :param frame: The frame of this SubmittedFrame.  # noqa: E501
         :type frame: str
-        :param value: The value of this LoginBody.  # noqa: E501
+        :param value: The value of this SubmittedFrame.  # noqa: E501
         :type value: str
-        :param h_captcha_response: The h_captcha_response of this LoginBody.  # noqa: E501
+        :param h_captcha_response: The h_captcha_response of this SubmittedFrame.  # noqa: E501
         :type h_captcha_response: str
         """
         self.swagger_types = {
@@ -40,34 +40,34 @@ class LoginBody(Model):
         self._h_captcha_response = h_captcha_response
 
     @classmethod
-    def from_dict(cls, dikt) -> 'LoginBody':
+    def from_dict(cls, dikt) -> 'SubmittedFrame':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The login_body of this LoginBody.  # noqa: E501
-        :rtype: LoginBody
+        :return: The SubmittedFrame of this SubmittedFrame.  # noqa: E501
+        :rtype: SubmittedFrame
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def frame(self) -> str:
-        """Gets the frame of this LoginBody.
+        """Gets the frame of this SubmittedFrame.
 
         The frame that was submitted by the user  # noqa: E501
 
-        :return: The frame of this LoginBody.
+        :return: The frame of this SubmittedFrame.
         :rtype: str
         """
         return self._frame
 
     @frame.setter
     def frame(self, frame: str):
-        """Sets the frame of this LoginBody.
+        """Sets the frame of this SubmittedFrame.
 
         The frame that was submitted by the user  # noqa: E501
 
-        :param frame: The frame of this LoginBody.
+        :param frame: The frame of this SubmittedFrame.
         :type frame: str
         """
         allowed_values = ["username", "password", "mfa"]  # noqa: E501
@@ -81,22 +81,22 @@ class LoginBody(Model):
 
     @property
     def value(self) -> str:
-        """Gets the value of this LoginBody.
+        """Gets the value of this SubmittedFrame.
 
         The value submitted by the user  # noqa: E501
 
-        :return: The value of this LoginBody.
+        :return: The value of this SubmittedFrame.
         :rtype: str
         """
         return self._value
 
     @value.setter
     def value(self, value: str):
-        """Sets the value of this LoginBody.
+        """Sets the value of this SubmittedFrame.
 
         The value submitted by the user  # noqa: E501
 
-        :param value: The value of this LoginBody.
+        :param value: The value of this SubmittedFrame.
         :type value: str
         """
         if value is None:
@@ -106,22 +106,22 @@ class LoginBody(Model):
 
     @property
     def h_captcha_response(self) -> str:
-        """Gets the h_captcha_response of this LoginBody.
+        """Gets the h_captcha_response of this SubmittedFrame.
 
         A token proving the user has completed the hcaptcha challenge. Only required if the user was prompted to complete a captcha before  # noqa: E501
 
-        :return: The h_captcha_response of this LoginBody.
+        :return: The h_captcha_response of this SubmittedFrame.
         :rtype: str
         """
         return self._h_captcha_response
 
     @h_captcha_response.setter
     def h_captcha_response(self, h_captcha_response: str):
-        """Sets the h_captcha_response of this LoginBody.
+        """Sets the h_captcha_response of this SubmittedFrame.
 
         A token proving the user has completed the hcaptcha challenge. Only required if the user was prompted to complete a captcha before  # noqa: E501
 
-        :param h_captcha_response: The h_captcha_response of this LoginBody.
+        :param h_captcha_response: The h_captcha_response of this SubmittedFrame.
         :type h_captcha_response: str
         """
 
