# swagger_server/swagger/swagger.yaml
@@ -8,29 +8,21 @@ info:
 servers:
 - url: /_api/
 paths:
-  /login:
-    get:
+  /init_login_session:
+    post:
       tags:
       - Authentication
       summary: Start logging in
-      description: "Returns a html page guiding the user through the login process.\
-        \ The first frame shown will prompt the user to enter their username, the\
-        \ order (and number) of subsequent frames is determined by the server. Also\
-        \ returns a session cookie that is used to keep track of login progress on\
-        \ the server"
+      description: "Validates the users redirect url and, if it is valid, starts a\
+        \ login session on the server. If a username is provided, the client will\
+        \ not have to fill out the username frame while logging in (re-authentication)"
       operationId: login_start_session
-      parameters:
-      - name: redirect
-        in: query
-        description: "The AES-encrypted redirection url. If this is not a valid url\
-          \ belonging to hackthissite.org, the server must respond with a 403 Not\
-          \ Allowed."
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/InitLoginSession'
         required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-        example: forums.hackthissite.org
       responses:
         "200":
           description: "OK, the user may start the login process"
@@ -43,10 +35,15 @@ paths:
               schema:
                 type: string
                 example: LoginSession=<token>;
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NextFrame'
         "403":
-          description: The redirect-to parameter was not a valid hackthissite url.
-            Authentication for this url is not allowed.
+          description: The redirect-to parameter was not a valid hackthissite url
+            or the given username does not exist.
       x-openapi-router-controller: swagger_server.controllers.authentication_controller
+  /submit_login_frame:
     post:
       tags:
       - Authentication
@@ -69,7 +66,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/login_body'
+              $ref: '#/components/schemas/SubmittedFrame'
         required: true
       responses:
         "200":
@@ -102,55 +99,47 @@ paths:
             \ restart authentication from the beginning. The server will not accept\
             \ further requests for the current login sequence."
       x-openapi-router-controller: swagger_server.controllers.authentication_controller
-  /reauth:
-    get:
-      tags:
-      - Authentication
-      summary: "Reauthenticate a user in case their session expired, without needing\
-        \ to enter the username again"
-      description: "Returns a html page guiding the user through the login process.\
-        \ The login is for a specific account, meaning the user does not have the\
-        \ option to enter a username and is instead directly shown the password screen"
-      operationId: login_start_reauth
-      parameters:
-      - name: redirect
-        in: query
-        description: "The AES-encrypted redirection url. If this is not a valid url\
-          \ belonging to hackthissite.org, the server must respond with a 403 Not\
-          \ Allowed."
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-        example: forums.hackthissite.org
-      - name: username
-        in: query
-        description: The account name that should be reauthenticated
-        required: true
-        style: form
-        explode: true
-        schema:
-          type: string
-        example: Alaska
-      responses:
-        "200":
-          description: "OK, the user may start the login process"
-          headers:
-            Set-Cookie:
-              description: An login session token that should be sent along with future
-                requests.
-              style: simple
-              explode: false
-              schema:
-                type: string
-                example: LoginSession=<token>;
-        "403":
-          description: The redirect-to parameter was not a valid hackthissite url
-            or the given username does not exist.
-      x-openapi-router-controller: swagger_server.controllers.authentication_controller
 components:
   schemas:
+    InitLoginSession:
+      required:
+      - redirect
+      type: object
+      properties:
+        redirect:
+          type: string
+          description: "The AES-encrypted domain that the client will be redirected\
+            \ to after authentication completes. If this is not a valid url belonging\
+            \ to hackthissite.org, the server must not open a session."
+        username:
+          type: string
+          description: The account name that should be reauthenticated
+          example: Alaska
+      description: The initial payload sent by the client which starts a login session
+        on the server
+    SubmittedFrame:
+      required:
+      - frame
+      - value
+      type: object
+      properties:
+        frame:
+          type: string
+          description: The frame that was submitted by the user
+          example: password
+          enum:
+          - username
+          - password
+          - mfa
+        value:
+          type: string
+          description: The value submitted by the user
+          example: my-very-secure-password123
+        h-captcha-response:
+          type: string
+          description: A token proving the user has completed the hcaptcha challenge.
+            Only required if the user was prompted to complete a captcha before
+          example: <challenge token>
     NextFrame:
       required:
       - next
@@ -199,27 +188,4 @@ components:
           example: HackThisSite=<token>;path=/;domain=hackthissite.org
       description: Provides the client with an authentication cookie and a redirection
         url after completing login
-    login_body:
-      required:
-      - frame
-      - value
-      type: object
-      properties:
-        frame:
-          type: string
-          description: The frame that was submitted by the user
-          example: password
-          enum:
-          - username
-          - password
-          - mfa
-        value:
-          type: string
-          description: The value submitted by the user
-          example: my-very-secure-password123
-        h-captcha-response:
-          type: string
-          description: A token proving the user has completed the hcaptcha challenge.
-            Only required if the user was prompted to complete a captcha before
-          example: <challenge token>
 
